# data-cleaning-for-housing-data

./: .cursorignore  .gitignore  LICENSE.md  README.md  RUNBOOK.md  Readme.md  cleaning.sql  pyproject.toml
.github/workflows/: ci.yaml  clean-data.yml
data/: dataset.csv
scripts/: backup_geocodes.py  config.py  data_quality_dashboard.py  db.py  ensure_database.py  export_dataset.py  export_sanitised_dump.py  load_csv.py  nashville_bounds.py  pg_tools.py  property_map.py  psql_with_config.py  remove_bom.py  restore_backup.py  run.ps1  run.sh  setup.ps1  setup.sh
src/: address_imputation.sql  address_standardization.sql  cleaning.sql  complete_cleaning_process  complete_cleaning_process.sql  data_quality_maintenance.sql  geocoding_dashboard.py  geocoding_integration.py  geocoding_service.py  schema.sql  sync_addresses.sql
src/typings/dash_bootstrap_components/: __init__.pyi
src/typings/plotly/: express.pyi  graph_objects.pyi
tests/: test_config.py  test_db.py  test_everything.sh  test_export_invariants.py  test_integration_postgres.py  test_remove_bom.py
