[project]
name = "data-cleaning-for-housing-data"
version = "0.1.0"
description = "Cleaning the *Nashville Housing Data* dataset."
authors = [{ name = "Giorgia Faedda", email = "giorgiafaedda3@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
[dependency-groups]
dev = [
  "poethepoet>=0.34.0",
  "pytest>=9.0",
  "black>=25.1.0",
  "pyright>=1.1.400",
  "json5>=0.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project", "scripts"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--import-mode=importlib"
testpaths = ["src", "scripts"]
python_files = ["*_test.py"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["**/__pycache__", "src/typings"]
stubPath = "src/typings"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberAccess = "warning"
reportUnknownMemberType = "none"
reportUnknownModuleType = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[project.scripts]
main = "my_project.main:main"

[tool.poe.tasks.address-standardization]
cmd = "python ./scripts/psql_with_config.py -f ./src/address_standardization.sql"

[tool.poe.tasks.address-standardization.env]
DB_DATABASE.default = "housing"

[tool.poe.tasks.geocoder]
cmd = "python ./src/geocoding_integration.py"

[tool.poe.tasks.geocoder.env]
DB_DATABASE.default = "housing"

[tool.poe.tasks.geocoding-dashboard]
cmd = "python ./src/geocoding_dashboard.py"

[tool.poe.tasks.geocoding-dashboard.env]
DB_DATABASE.default = "housing"

[tool.poe.tasks.data-quality-check]
cmd = "streamlit run ./scripts/data_quality_dashboard.py"

[tool.poe.tasks.data-quality-check.env]
DB_DATABASE.default = "housing"

[tool.poe.tasks.show-map]
cmd = "python ./scripts/property_map.py"

[tool.poe.tasks.show-map.env]
DB_DATABASE.default = "housing"

[tool.poe.tasks]
remove-bom = "python ./scripts/remove_bom.py --input='./data/dataset.csv' --output='./data/dataset_no_bom.csv'"
load-csv = "python ./scripts/load_csv.py --datasetFile='./data/dataset_no_bom.csv' --table='HousingDataRaw'"
ensure-out-dir = "python -c \"import os; os.makedirs('out', exist_ok=True)\""
sql-install-fuzzystrmatch = "python ./scripts/psql_with_config.py -c \"CREATE EXTENSION IF NOT EXISTS fuzzystrmatch;\""
sql-cleanup = "python ./scripts/psql_with_config.py -f ./src/cleaning.sql"
data-cleaning-pipeline = [
  "ensure-out-dir", 
  "remove-bom", 
  "load-csv",
  "sql-install-fuzzystrmatch", 
  "sql-cleanup", 
]
sql-cleanup-keep = "python ./scripts/psql_with_config.py -v KEEP_TABLES=1 -f ./src/cleaning.sql"
data-cleaning-pipeline-keep = [
    "ensure-out-dir", 
    "remove-bom", 
    "load-csv", 
    "sql-install-fuzzystrmatch", 
    "sql-cleanup-keep"
    ]

# Provision the full enriched database (PostGIS, geocoding, address functions)
# by restoring data/migration_dump.backup into a dedicated database. See README.
restore-backup = "python ./scripts/restore_backup.py"
restore-backup-fresh = "python ./scripts/restore_backup.py --recreate"

upgrade-agentic-tools = "uv lock --upgrade-package agentic-tools"
sync-skills = "uv run agentic-tools skills sync"
sync-ai-policy = "uv run agentic-tools policy sync"
sync-ai-policy-import-vscode = "uv run agentic-tools policy import-vscode"
policy-check = "uv run agentic-tools policy check"
lint = "python -m black --check ./src"
lint-fix = "python -m black ./src"
typecheck = "python -m pyright ./src"
test = "python -m pytest"
# --- AI Secure Parameterized Tasks ---
lint-filter = { help = "Run linter and filter output", shell = "python -m black --check ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
typecheck-filter = { help = "Run typechecker and filter output", shell = "python -m pyright ./src | grep -i -E ${filter_term}", args = [
  { name = "filter_term", positional = true, required = true },
] }
