[project]
name = "data-cleaning-for-housing-data"
version = "0.1.0"
description = "Cleaning the *Nashville Housing Data* dataset."
authors = [{ name = "Giorgia Faedda", email = "giorgiafaedda3@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    # psycopg (v3) replaces psycopg2, which is in maintenance mode.
    # The [binary] extra ships a prebuilt libpq so CI needs no compiler.
    # psycopg2-binary was removed: every engine now goes through
    # scripts/db.py, which pins the postgresql+psycopg dialect.
    "psycopg[binary] (>=3.2,<4.0)",
    "folium (>=0.19.5,<0.20.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests>=2.34.2",
    "dash>=4.3.0",
    "dash-bootstrap-components>=2.0.4",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pytest>=9.0",
    "black>=25.1.0",
    "pyright>=1.1.400",
    "json5>=0.9",
    # Real-Postgres integration tests without touching your local server.
    "testcontainers[postgres]>=4.8",
    # Type stubs so mypy understands third-party APIs.
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
    "agentic-tools@git+https://github.com/swiftpostlabs/agentic-tools.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--import-mode=importlib -m \"not export\""
testpaths = ["tests"]
markers = [
    "export: invariant checks on out/dataset.csv and out/dataset_public.csv — needs a prior export-dataset run",
]

[tool.black]
# Without this, black infers targets from requires-python (">=3.14,<4.0"),
# includes py315, and its AST safety check fails under the installed 3.14.
target-version = ["py314"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
# Setting exclude replaces pyright's defaults, so "**/.*" (which covers
# .venv) must be restated or pyright type-checks the whole virtualenv.
exclude = ["**/__pycache__", "**/.*", "src/typings"]
stubPath = "src/typings"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberAccess = "warning"
reportUnknownMemberType = "none"
reportUnknownModuleType = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

# No [tool.poe.env] DB_DATABASE default: scripts/config.py already falls back
# to "postgres" when unset, and a poe-global value leaks into shell tasks
# (test-everything warned about a phantom DB_DATABASE because of it). Every
# DB-touching task pins its own DB_DATABASE below.

[tool.poe.tasks]
# Feature tools: operate on the geocoded_housing database provisioned by
# geocode-prep, which creates it if missing.
address-standardization = { cmd = "python ./scripts/psql_with_config.py -f ./src/address_standardization.sql", env = { DB_DATABASE = "geocoded_housing" } }
address-imputation = { cmd = "python ./scripts/psql_with_config.py -f ./src/address_imputation.sql", env = { DB_DATABASE = "geocoded_housing" } }
data-quality-maintenance = { cmd = "python ./scripts/psql_with_config.py -f ./src/data_quality_maintenance.sql", env = { DB_DATABASE = "geocoded_housing" } }
geocoder = { cmd = "python ./src/geocoding_integration.py", env = { DB_DATABASE = "geocoded_housing" } }
geocoding-dashboard = { cmd = "python ./src/geocoding_dashboard.py", env = { DB_DATABASE = "geocoded_housing" } }
data-quality-check = { cmd = "streamlit run ./scripts/data_quality_dashboard.py", env = { DB_DATABASE = "geocoded_housing" } }
show-map = { cmd = "python ./scripts/property_map.py", env = { DB_DATABASE = "geocoded_housing" } }

# Cleaning tools: Require an override. MUST be written as inline tables { cmd = "...", env = {...} }.
ensure-geocoded-db = { cmd = "python ./scripts/ensure_database.py", env = { DB_DATABASE = "geocoded_housing" } }
load-csv = { cmd = "python ./scripts/load_csv.py --datasetFile='./data/dataset_no_bom.csv' --table='HousingDataRaw'", env = { DB_DATABASE = "geocoded_housing" } }
sql-install-fuzzystrmatch = { cmd = "python ./scripts/psql_with_config.py -c \"CREATE EXTENSION IF NOT EXISTS fuzzystrmatch;\"", env = { DB_DATABASE = "geocoded_housing" } }
sql-cleanup = { cmd = "python ./scripts/psql_with_config.py -f ./src/cleaning.sql", env = { DB_DATABASE = "geocoded_housing" } }
sql-cleanup-keep = { cmd = "python ./scripts/psql_with_config.py -v KEEP_TABLES=1 -f ./src/cleaning.sql", env = { DB_DATABASE = "geocoded_housing" } }
remove-bom = "python ./scripts/remove_bom.py --input='./data/dataset.csv' --output='./data/dataset_no_bom.csv'"
ensure-out-dir = "python -c \"import os; os.makedirs('out', exist_ok=True)\""
data-cleaning-pipeline = [
    "ensure-out-dir",
    "ensure-geocoded-db",
    "remove-bom",
    "load-csv",
    "sql-install-fuzzystrmatch",
    "sql-cleanup",
]
data-cleaning-pipeline-keep = [
    "ensure-out-dir",
    "ensure-geocoded-db",
    "remove-bom",
    "load-csv",
    "sql-install-fuzzystrmatch",
    "sql-cleanup-keep",
]

# Bridges the cleaning pipeline's output into the durable geocode cache
# (unique_addresses/address_mappings). Never includes `geocoder` -- that
# stays manual and rate-limited (see src/sync_addresses.sql).
sync-addresses = { cmd = "python ./scripts/psql_with_config.py -f ./src/sync_addresses.sql", env = { DB_DATABASE = "geocoded_housing" } }
geocode-prep = ["data-cleaning-pipeline-keep", "sync-addresses"]

# Writes out/dataset.csv (full, LOCAL ONLY) and out/dataset_public.csv
# (owner coordinates redacted) from whatever the geocode cache currently
# holds. Works with a partially-geocoded cache (LEFT JOIN).
export-dataset = { cmd = "python ./scripts/export_dataset.py", env = { DB_DATABASE = "geocoded_housing" } }

# Disaster-recovery dump of the durable geocode cache (unique_addresses,
# address_correction_log) — geocoding is manual/rate-limited, so this is the
# only backup of that work. Output is gitignored (out/geocodes.backup).
backup-geocodes = { cmd = "python ./scripts/backup_geocodes.py", env = { DB_DATABASE = "geocoded_housing" } }

# Full nuke-and-rebuild: cleans databases + artifacts, runs every gate
# and every tool. Needs Postgres running with extensions installed.
test-everything = { shell = "bash tests/test_everything.sh" }

upgrade-agentic-tools = "uv lock --upgrade-package agentic-tools"
sync-skills = "uv run agentic-tools skills sync"
sync-ai-policy = "uv run agentic-tools policy sync"
sync-ai-policy-import-vscode = "uv run agentic-tools policy import-vscode"
policy-check = "uv run agentic-tools policy check"
lint = "python -m black --check ./src"
lint-fix = "python -m black ./src"
typecheck = "python -m pyright ./src"
test = "python -m pytest"
# --- AI Secure Parameterized Tasks ---
lint-filter = { help = "Run linter and filter output", shell = "python -m black --check ./src | grep -i -E ${filter_term}", args = [
    { name = "filter_term", positional = true, required = true },
] }
typecheck-filter = { help = "Run typechecker and filter output", shell = "python -m pyright ./src | grep -i -E ${filter_term}", args = [
    { name = "filter_term", positional = true, required = true },
] }
